--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,11 @@ compileJava {
 
 javafx {
     version = '17.0.8'
-    modules = [ 'javafx.controls' ]
+    modules = [ 'javafx.controls', 'javafx.media' ]
+}
+
+dependencies {
+    implementation group: 'org.openjfx', name: 'javafx-media', version: '21'
 }
 
 application {
