Add start screen and refactor Main + Game window

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'dwhiteheadcode.com.github.robot_defender.App'
+    mainClass = 'dwhiteheadcode.com.github.robot_defender.Main'
 }
 
 pmd {
